Added type to buttons

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               <li>bootstrap</li>
               <li>Ruby</li>
             </ul>
-            <button class="button-card1">See Project</button>
+            <button class="button-card1" type="button">See Project</button>
           </div>
         </div>
       </div>
@@ -145,7 +145,7 @@
               <li>Ruby</li>
             </ul>
           </div>
-          <button class="u-button-card">See Project</button>
+          <button class="u-button-card" type="button">See Project</button>
         </div>
 
         <div class="card-row3">
@@ -163,7 +163,7 @@
               <li>Ruby</li>
             </ul>
           </div>
-          <button class="u-button-card">See Project</button>
+          <button class="u-button-card" type="button">See Project</button>
         </div>
 
         <div class="card-row4">
@@ -183,7 +183,7 @@
               <li>Ruby</li>
             </ul>
           </div>
-          <button class="u-button-card button-1 ">See Project</button>
+          <button class="u-button-card button-1 " type="button">See Project</button>
         </div>
         <div class="card-row5">
           <div class="inner-universal-div-2lines">
@@ -203,7 +203,7 @@
               <li>Ruby dde</li>
             </ul>
           </div>
-          <button class="u-button-card ">See Project</button>
+          <button class="u-button-card " type="button">See Project</button>
         </div>
         <div class="card-row6">
           <div class="inner-universal-div-2lines">
@@ -220,7 +220,7 @@
               <li>Ruby</li>
             </ul>
           </div>
-          <button class="u-button-card ">See Project</button>
+          <button class="u-button-card" type="button">See Project</button>
         </div>
         <div class="card-row7">
           <div class="inner-universal-div-2lines">
@@ -238,7 +238,7 @@
               <li>Ruby</li>
             </ul>
           </div>
-          <button class="u-button-card ">See Project</button>
+          <button class="u-button-card" type="button">See Project</button>
         </div>
       </div>
     </div>
@@ -253,7 +253,7 @@
           hestiate to contact me.
         </p>
         <div class="buton-resume-div">
-          <button class="about-me-button">Get My Resume</button>
+          <button class="about-me-button" type="button">Get My Resume</button>
          
           <img class="line-division-aboutme-desk " src="images/line-division-aboutme-desktp.png"
             alt="line-division-image" />
