Fixing styling linters

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </div>
       </div>
 
-       <a id="portfolio0101"></a><div class="container-grid-pworks" > </a>
+       <a id="portfolio0101"> <div class="container-grid-pworks" > </a>
         <div class="card-row2">
           <div class="inner-universal-div-2lines">
            <h3 class="u-card-h3">
@@ -243,9 +243,9 @@
       </div>
     </div>
      
-   <a id="aboutme-0101"> <div class="about-me-main"> </a>
+    <div class="about-me-main"> 
       <div class="about-me-introduction">
-        <h3 class="about-me-h3">About me</h3>
+        <a id="aboutme-0101"> <h3 class="about-me-h3">About me</h3> </a>
         <p class="about-me-p">
           Hello I'm a software developer! I can help you build a product,
           feature or website Look through some of my work and experience! If
