Adding h2 to fix webhints

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
   <section class="header1">
     <header>
-      <a class="company">Jorge Polo</a>
+      <h2><a class="company">Jorge Polo</a></h2>
+      
 
       <nav>
         <div class="menu-bar ">
@@ -125,12 +126,12 @@
         </div>
       </div>
 
-       <a id="portfolio0101"> <div class="container-grid-pworks" > </a>
+        <div class="container-grid-pworks" > 
         <div class="card-row2">
           <div class="inner-universal-div-2lines">
-           <h3 class="u-card-h3">
+            <a id="portfolio0101"><h3 class="u-card-h3">
               Profesional Art Printing Data
-            </h3> 
+            </h3> </a>
 
             <p class="u-card-p">
               A daily selection of privately 
