--- a/index.html
+++ b/index.html
@@ -312,13 +312,13 @@
     </div>
   </section>
 
-  <a id="contact0101"> <footer class="contact-form"></a>
+   <footer class="contact-form">
    <div class="intro-contact-desktop">
       <div class="contact-intro">
-        <p>
+        <a id="contact0101"> <p>
           I'm always interested in hearing about new projects, so if you'd
           like to chat please get in touch.
-        </p>
+        </p> </a>
       </div>
       <form action="https://formspree.io/f/mayvwljj" method="post">
         <ul class="contact-main-list">
