--- a/index.html
+++ b/index.html
@@ -47,6 +47,22 @@
         </ul>
       </nav>
     </header>
+
+    <div id="myNav" class="overlay">
+
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    
+      <div class="overlay-content">
+        <a href="#portfolio" onclick="closeNav()">Portfolio</a>
+        <hr>
+        <a href="#about" onclick="closeNav()">About</a>
+        <hr>
+        <a href="#contact" onclick="closeNav()">Contact</a>
+        <hr>
+      </div>
+    
+    </div>
+
   </section>
 
   <section class="container-main">
