Add style to Mobile Menu

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <nav>
         <div class="menu-bar ">
-          <i class="fas fa-bars"></i>
+          <i onclick="openNav()" class="fas fa-bars"></i>
         </div>
         <ul class="header-menu">
           <li>  <a href="#portfolio0101">  Portfolio </a></li>
