added style to onoclick menu-bar

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     
       <div class="overlay-content">
-        <a href="#portfolio" onclick="closeNav()">Portfolio</a>
+        <a href="#portfolio" onclick="closeNav()" class="orion">Portfolio</a>
         <hr>
-        <a href="#about" onclick="closeNav()">About</a>
+        <a href="#about" onclick="closeNav()" class="orion">About</a>
         <hr>
-        <a href="#contact" onclick="closeNav()">Contact</a>
+        <a href="#contact" onclick="closeNav()" class="orion">Contact</a>
         <hr>
       </div>
     
@@ -385,7 +385,7 @@
         </li>
       </ul>
     </div>
-    <hr class="have2-hidden" />
+    <hr class="have2-hidden last-line" />
   </footer>
 
 </body>
