added style line division

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     
       <div class="overlay-content">
-        <a href="#portfolio" onclick="closeNav()" class="orion">Portfolio</a>
+        <a href="#portfolio0101" onclick="closeNav()" class="orion">Portfolio</a>
         <hr>
-        <a href="#about" onclick="closeNav()" class="orion">About</a>
+        <a href="#aboutme-0101" onclick="closeNav()" class="orion">About</a>
         <hr>
-        <a href="#contact" onclick="closeNav()" class="orion">Contact</a>
+        <a href="#contact0101" onclick="closeNav()" class="orion">Contact</a>
         <hr>
       </div>
     
