--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-
+  <div id="popup"></div>
   <section class="header1">
     <header>
       <h2><a class="company">Jorge Polo</a></h2>
@@ -116,6 +116,9 @@
     </div>
 
     <div class="previous-works-container">
+      <div id="recentWork"></div>
+
+<!--       
       <div class="card-row1">
         <div class="card1-img-container">
           <img class="card-img-size" src="images/card-image/card1.svg" alt="first-previous-work-image" />
@@ -141,9 +144,11 @@
             <button class="button-card1" type="button">See Project</button>
           </div>
         </div>
-      </div>
+      </div> -->
 
-        <div class="container-grid-pworks" > 
+      <div id="projects"></div>
+
+        <!-- <div class="container-grid-pworks" > 
         <div class="card-row2">
           <div class="inner-universal-div-2lines">
             <a id="portfolio0101"><h3 class="u-card-h3">
@@ -163,7 +168,7 @@
               <li>Ruby</li>
             </ul>
           </div>
-          <button class="u-button-card" type="button">See Project</button>
+          <button class="u-button-card btn-project-1" type="button">See Project</button>
         </div>
 
         <div class="card-row3">
@@ -259,7 +264,7 @@
           <button class="u-button-card" type="button">See Project</button>
         </div>
       </div>
-    </div>
+    </div> -->
      
     <div class="about-me-main"> 
       <div class="about-me-introduction">
